--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.7.0
+  flutter_svg: ^1.1.6
   get: ^4.6.5
 
 dev_dependencies:
@@ -38,4 +39,3 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-    
