--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,10 @@ environment:
   sdk: ">=2.18.6 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^4.4.5
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.3.0
+  firebase_core: ^2.8.0
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.7.0
