--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.3.0
   firebase_core: ^2.8.0
+  firebase_storage: ^11.0.16
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.7.0
   flutter_svg: ^1.1.6
   get: ^4.6.5
+  image_picker: ^0.8.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
